--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
+    "jose": "^5.6.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
     "mongoose": "^8.4.3",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
     "@cloudflare/workers-types": "^4.20240620.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
