--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/mongoose-aggregate-paginate-v2": "^1.0.12",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,7 +30,10 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
     "mongoose": "^8.4.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.0",
     "next": "14.2.4",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
