--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jose": "^5.6.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "pusher": "^5.2.0",
