--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
+    "vercel": "^34.2.7",
     "wrangler": "^3.61.0"
   }
 }
