--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -45,8 +42,6 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.11.3",
-    "@cloudflare/workers-types": "^4.20240620.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
@@ -54,14 +49,9 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "eslint-plugin-next-on-pages": "^1.11.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vercel": "^34.2.7",
-    "wrangler": "^3.61.0"
-  },
-  "browser": {
-    "crypto": false
+    "vercel": "^34.2.7"
   }
 }
